@@ -1,3 +1,4 @@
+#test prefs example rc file
 theme /home/keithhedger/.themes/WinterWoodQT
 colour #ff00ff
 gravity 0xfe
