@@ -30,10 +30,10 @@ PKG_CHECK_MODULES(LFSTK, $LFSTK_MODULES)
 AC_SUBST(LFSTK_LIBS)
 AC_SUBST(LFSTK_CFLAGS)
 
-#IMLIB_MODULES="imlib2 >= 1.4.6"
-#PKG_CHECK_MODULES(IMLIB, $IMLIB_MODULES)
-#AC_SUBST(IMLIB_LIBS)
-#AC_SUBST(IMLIB_CFLAGS)
+IMLIB_MODULES="imlib2 >= 1.4.6"
+PKG_CHECK_MODULES(IMLIB, $IMLIB_MODULES)
+AC_SUBST(IMLIB_LIBS)
+AC_SUBST(IMLIB_CFLAGS)
 
 AC_CONFIG_FILES([Makefile LFSTray/app/Makefile])
 AC_OUTPUT
