@@ -1,4 +1,5 @@
 0.7.0
+Ignore lines beginning with '#' when using LFSTK_loadVarsFromFile from prefs class.
 Changes to structures, you must recompile all.
 
 0.6.1
